--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sushi Bar</title>
     <link rel="stylesheet" href="./vendor/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./vendor/wow/animate.min.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
@@ -42,48 +43,48 @@
         <section class="start">
             <div class="contentBorder startContent">
                 <div class="sideText">
-                    <h1>Вкус Японии</h1>
-                    <p>Доставим твои <span>любимые суши</span>.
+                    <h1 class="wow animate__fadeInUp" data-wow-duration="1.2s">Вкус Японии</h1>
+                    <p class="wow animate__fadeInUp" data-wow-duration="1.5s">Доставим твои <span>любимые суши</span>.
                         Закажи и доставим к твоей двери одним нажатием.</p>
                     <a href="#topProducts">Заказать сейчас</a>
                 </div>
-                <div class="sideImage">
+                <div class="sideImage wow animate__fadeIn" data-wow-duration="1.5s">
                     <img src="./img/start.webp" alt="">
                 </div>
             </div>
         </section>
         <section class="first">
             <div class="contentBorder firstContent">
-                <h2>Почему мы?</h2>
-                <p>Потому что:</p>
+                <h2 class="wow animate__fadeInUp" data-wow-duration="1.2s">Почему мы?</h2>
+                <p class="wow animate__fadeInLeft" data-wow-duration="1.4s">Потому что:</p>
                 <div class="firstTextContent">
                     <ol>
-                        <li>
+                        <li class="wow animate__fadeInLeft" data-wow-duration="2.4s">
                             <div class="contentWrapper">
                                 <span>ОТЛИЧНАЯ ВЫГОДА</span>
                                 <p><span>скидка 20%</span> на предварительный заказ</p>
                             </div>
                         </li>
-                        <li>
+                        <li class="wow animate__fadeInLeft" data-wow-duration="2s">
                             <div class="contentWrapper">
                                 <span>ОПЫТНЫЕ ПОВАРА</span>
                                 <p>постоянный контроль опытным шефом</p>
                             </div>
                         </li>
-                        <li>
+                        <li class="wow animate__fadeInLeft" data-wow-duration="1.6s">
                             <div class="contentWrapper">
                                 <span>ПРЕМИУМ</span>
                                 <p>только свежие ингредиенты прямиком с Японии</p>
                             </div>
                         </li>
-                        <li>
+                        <li class="wow animate__fadeInLeft" data-wow-duration="1.2s">
                             <div class="contentWrapper">
                                 <span>ДОСТАВКА</span>
                                 <p>быстрая доставка за пределы города</p>
                             </div>
                         </li>
                     </ol>
-                    <div class="sideImage">
+                    <div class="sideImage wow animate__fadeIn" data-wow-duration="1.5s">
                         <img src="./img/first.webp" width="473" height="346" alt="">
                     </div>
                 </div>
@@ -91,8 +92,8 @@
         </section>
         <section class="second" id="topProducts">
             <div class="contentBorder secondContent">
-                <h2>ТОПЫ</h2>
-                <div class="swiper tops">
+                <h2 class="wow animate__fadeInLeft" data-wow-duration="1.2s">ТОПЫ</h2>
+                <div class="swiper tops wow animate__fadeIn" data-wow-duration="1.4s">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide prodCard">
                             <img src="./img/prodCard.webp" alt="">
@@ -254,8 +255,8 @@
         </section>
         <section class="third">
             <div class="contentBorder thirdContent">
-                <h2>КАТЕГОРИИ</h2>
-                <div class="swiper categorySlider">
+                <h2 class="wow animate__fadeInLeft" data-wow-duration="1.2s">КАТЕГОРИИ</h2>
+                <div class="swiper categorySlider wow animate__fadeIn" data-wow-duration="1s">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide categoryCard active">
                             <img src="./img/ptc.svg" alt="">
@@ -296,7 +297,7 @@
                     </div>
                 </div>
                 <div class="prodList">
-                    <div class="prodCard">
+                    <div class="prodCard wow animate__fadeIn" data-wow-duration="1s">
                         <img src="./img/prodCard.webp" alt="">
                         <div class="cardTitle">
                             <h3>Мейро маки</h3>
@@ -315,7 +316,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="prodCard">
+                    <div class="prodCard wow animate__fadeIn" data-wow-duration="1s">
                         <img src="./img/prodCard.webp" alt="">
                         <div class="cardTitle">
                             <h3>Мейро маки</h3>
@@ -334,7 +335,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="prodCard">
+                    <div class="prodCard wow animate__fadeIn" data-wow-duration="1s">
                         <img src="./img/prodCard.webp" alt="">
                         <div class="cardTitle">
                             <h3>Мейро маки</h3>
@@ -353,7 +354,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="prodCard">
+                    <div class="prodCard wow animate__fadeIn" data-wow-duration="1s">
                         <img src="./img/prodCard.webp" alt="">
                         <div class="cardTitle">
                             <h3>Мейро маки</h3>
@@ -372,7 +373,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="prodCard">
+                    <div class="prodCard wow animate__fadeIn" data-wow-duration="1s">
                         <img src="./img/prodCard.webp" alt="">
                         <div class="cardTitle">
                             <h3>Мейро маки</h3>
@@ -391,7 +392,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="prodCard">
+                    <div class="prodCard wow animate__fadeIn" data-wow-duration="1s">
                         <img src="./img/prodCard.webp" alt="">
                         <div class="cardTitle">
                             <h3>Мейро маки</h3>
@@ -410,7 +411,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="prodCard">
+                    <div class="prodCard wow animate__fadeIn" data-wow-duration="1s">
                         <img src="./img/prodCard.webp" alt="">
                         <div class="cardTitle">
                             <h3>Мейро маки</h3>
@@ -429,7 +430,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="prodCard">
+                    <div class="prodCard wow animate__fadeIn" data-wow-duration="1s">
                         <img src="./img/prodCard.webp" alt="">
                         <div class="cardTitle">
                             <h3>Мейро маки</h3>
@@ -448,7 +449,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="prodCard">
+                    <div class="prodCard wow animate__fadeIn" data-wow-duration="1s">
                         <img src="./img/prodCard.webp" alt="">
                         <div class="cardTitle">
                             <h3>Мейро маки</h3>
@@ -467,7 +468,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="prodCard">
+                    <div class="prodCard wow animate__fadeIn" data-wow-duration="1s">
                         <img src="./img/prodCard.webp" alt="">
                         <div class="cardTitle">
                             <h3>Мейро маки</h3>
@@ -500,8 +501,8 @@
         <section class="fifth">
             <div class="contentBorder fifthContent">
                 <div class="sideText">
-                    <h2>Условия доставки</h2>
-                    <p>Суши премиум-класса теперь можно
+                    <h2 class="wow animate__fadeInUp" data-wow-duration="1.2s">Условия доставки</h2>
+                    <p class="wow animate__fadeInUp" data-wow-duration="1.5s">Суши премиум-класса теперь можно
                         заказать не только в японском ресторане,
                         но и на дом и в офис.
                         <br>
@@ -510,20 +511,20 @@
                     </p>
                     <a href="javascript:void(0)">Узнать больше</a>
                 </div>
-                <div class="sideImage">
+                <div class="sideImage wow animate__fadeIn" data-wow-duration="1.5s">
                     <img src="./img/fifth.webp" alt="">
                 </div>
             </div>
         </section>
         <section class="sixth">
             <div class="contentBorder sixthContent">
-                <div class="sideImage">
+                <div class="sideImage wow animate__fadeIn" data-wow-duration="1.5s">
                     <img src="./img/sixth.webp" alt="">
                 </div>
                 <div class="sideText">
-                    <h2>Часы открытия</h2>
+                    <h2 class="wow animate__fadeInUp" data-wow-duration="1.2s">Часы открытия</h2>
 
-                    <ul class="openTimes">
+                    <ul class="openTimes wow animate__fadeInUp" data-wow-duration="1.5s">
                         <li>
                             <span>Ресторан:</span>
                             <ul>
@@ -550,17 +551,17 @@
         </section>
         <section class="seventh">
             <div class="seventhContent">
-                <h3>Категории</h3>
+                <h3 class="wow animate__fadeInUp" data-wow-duration="1.2s">Категории</h3>
                 <ul>
-                    <li><a href="javascript:void(0)">РОЛЛЫ</a></li>
-                    <li><a href="javascript:void(0)">СУШИ</a></li>
-                    <li><a href="javascript:void(0)">СЕТЫ</a></li>
-                    <li><a href="javascript:void(0)">САШИМИ</a></li>
-                    <li><a href="javascript:void(0)">ГУНКАНЫ</a></li>
-                    <li><a href="javascript:void(0)">ГОРЯЧЕЕ</a></li>
-                    <li><a href="javascript:void(0)">ПОКЕ</a></li>
-                    <li><a href="javascript:void(0)">WOK</a></li>
-                    <li><a href="javascript:void(0)">УСТРИЦЫ</a></li>
+                    <li class="wow animate__fadeIn" data-wow-duration="0.8s"><a href="javascript:void(0)">РОЛЛЫ</a></li>
+                    <li class="wow animate__fadeIn" data-wow-duration="0.9s"><a href="javascript:void(0)">СУШИ</a></li>
+                    <li class="wow animate__fadeIn" data-wow-duration="1s"><a href="javascript:void(0)">СЕТЫ</a></li>
+                    <li class="wow animate__fadeIn" data-wow-duration="1.1s"><a href="javascript:void(0)">САШИМИ</a></li>
+                    <li class="wow animate__fadeIn" data-wow-duration="1.2s"><a href="javascript:void(0)">ГУНКАНЫ</a></li>
+                    <li class="wow animate__fadeIn" data-wow-duration="1.3s"><a href="javascript:void(0)">ГОРЯЧЕЕ</a></li>
+                    <li class="wow animate__fadeIn" data-wow-duration="1.4s"><a href="javascript:void(0)">ПОКЕ</a></li>
+                    <li class="wow animate__fadeIn" data-wow-duration="1.5s"><a href="javascript:void(0)">WOK</a></li>
+                    <li class="wow animate__fadeIn" data-wow-duration="1.6s"><a href="javascript:void(0)">УСТРИЦЫ</a></li>
                 </ul>
             </div>
         </section>
@@ -602,8 +603,18 @@
 
 <script src="./vendor/jquery-3.7.1.min.js"></script>
 <script src="./vendor/swiper/swiper-bundle.min.js"></script>
+<script src="./vendor/lenis/lenis.min.js"></script>
+<script src="./vendor/wow/wow.min.js"></script>
 <script src="./js/header.js"></script>
 <script src="./js/slider.js"></script>
 <script src="./js/onscrollanimation.js"></script>
+<script src="./js/prodCard.js"></script>
+<script>
+    new WOW().init();
+
+    const lenis = new Lenis({
+        autoRaf: true,
+    });
+</script>
 </body>
 </html>
